fix: double scrollbar left side (#236)

--- a/src/components/Calendar/Calendar.styl
+++ b/src/components/Calendar/Calendar.styl
@@ -26,7 +26,7 @@
   width 350px
   padding-top 16px
   padding-left 5px
-  height 90vh
+  height 100%
   flex-direction column
   overflow auto
 
